# soal

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: test-phase0.sh  test-phase1-network.sh
src/: api.rs  chunking.rs  codec.rs  commit.rs  crypto.rs  health.rs  identity.rs  invite.rs  lib.rs  main.rs  network.rs  policy.rs  replication.rs  schedule.rs  store.rs  sync.rs  tree.rs  vault.rs  watch.rs
tests/: e2e.rs  multi_node.rs
