[package]
name = "soal"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hex = "0.4"
dirs = "5.0"
anyhow = "1.0"
fastcdc = "3.1"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.10"
