[package]
name = "soal"
version = "0.1.0"
edition = "2021"
description = "A lightweight, sovereign, open-source protocol for secure, redundant, versioned, content-addressed distributed file storage and synchronization."
license = "MIT OR Apache-2.0"
repository = "https://github.com/soaljack/soal"
readme = "README.md"
keywords = ["p2p", "storage", "distributed", "backup", "sovereign"]
categories = ["filesystem", "cryptography"]
authors = ["Jeffrey Stewart (@soaljack)"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hex = "0.4"
dirs = "5.0"
anyhow = "1.0"
fastcdc = "3.1"
iroh = "1.0.0"
iroh-blobs = "0.103.0"
iroh-gossip = "0.101.0"
notify = "8.2.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "rt"] }
futures-lite = "2.6.1"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
